--- a/Windshaft-cartodb/Dockerfile
+++ b/Windshaft-cartodb/Dockerfile
@@ -1,17 +1,17 @@
 FROM ubuntu:trusty
 MAINTAINER Milo van der Linden <milo@dogodigi.net>
 
-ENV CARTO_ENV development
-ENV DB_HOST db
-ENV DB_PORT 5432
-ENV DB_USER postgres
+# ENV CARTO_ENV development
+# ENV DB_HOST db
+# ENV DB_PORT 5432
+# ENV DB_USER postgres
 
-ENV REDIS_HOST redis
-ENV REDIS_PORT 6379
-ENV CARTO_SESSION_DOMAIN localdomain
-ENV CORS_ENABLED true
+# ENV REDIS_HOST redis
+# ENV REDIS_PORT 6379
+# ENV CARTO_SESSION_DOMAIN localdomain
+# ENV CORS_ENABLED true
 
-ENV WINDSHAFT_PORT 8181
+# ENV WINDSHAFT_PORT 8181
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive \
     apt-get install -y --no-install-recommends apt-utils make g++ git-core \
