--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
     build: CartoDB-SQL-API/.
     ports:
       - "8125:8125"
+    links:
+      - cartodb-postgresql
+      - cartodb-redis
 
   windshaft-cartodb:
     build: Windshaft-cartodb/.
