--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,13 +23,17 @@ services:
     ports:
       - "6082:6082"
       - "6081:6081"
+      - "8181:8181"
     environment:
       - CARTO_ENV=development
-      - DB_HOST=db
+      - DB_HOST=cartodb-postgresql
       - DB_PORT=5432
       - DB_USER=postgres
-      - REDIS_HOST=redis
+      - REDIS_HOST=cartodb-redis
       - REDIS_PORT=6379
       - CARTO_SESSION_DOMAIN=localdomain
       - CORS_ENABLED=true
       - WINDSHAFT_PORT=8181
+    links:
+      - cartodb-postgresql
+      - cartodb-redis
