--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,3 +37,9 @@ services:
     links:
       - cartodb-postgresql
       - cartodb-redis
+  cartodb:
+    build: cartodb/.
+    ports: "3000:3000"
+    links:
+      - cartodb-postgresql
+      - cartodb-redis
