--- a/cartodb/database.yml
+++ b/cartodb/database.yml
@@ -1,33 +1,33 @@
 production:
   adapter: postgres
   encoding: unicode
-  host: localhost
-  port: 5432
-  direct_port: 5432
+  host: __DB_HOST__
+  port: __DB_PORT__
+  direct_port: __DB_PORT__
   database: carto_db_production
-  username: postgres
+  username: __DB_USER__
   password:
   conn_validator_timeout: 900
 
 staging:
   adapter: postgres
   encoding: unicode
-  host: localhost
-  port: 5432
-  direct_port: 5432
+  host: __DB_HOST__
+  port: __DB_PORT__
+  direct_port: __DB_PORT__
   database: carto_db_staging
-  username: postgres
+  username: __DB_USER__
   password:
   conn_validator_timeout: 900
 
 development:
   adapter: postgres
   encoding: unicode
-  host: cartodb-postgresql
-  port: 5432
-  direct_port: 5432
+  host: __DB_HOST__
+  port: __DB_PORT__
+  direct_port: __DB_PORT__
   database: carto_db_development
-  username: postgres
+  username: __DB_USER__
   password:
   conn_validator_timeout: 900
   pool: 50
@@ -36,9 +36,9 @@ test:
   adapter: postgres
   encoding: unicode
   database: carto_db_test
-  host: cartodb-postgresql
-  port: 5432
-  direct_port: 5432
-  username: postgres
+  host: __DB_HOST__
+  port: __DB_PORT__
+  direct_port: __DB_PORT__
+  username: __DB_USER__
   password:
   conn_validator_timeout: -1
