--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ services:
     build: cartodb-postgresql/.
     ports:
       - "5432:5432"
+    environment:
+      - LANG=en_US.UTF-8
+      - LC_ALL=en_US.UTF-8
+      - LANGUAGE = en_US
 
   cartodb-redis:
     build: cartodb-redis/.
