--- a/cartodb/pg_hba.conf
+++ b/cartodb/pg_hba.conf
@@ -107,4 +107,4 @@
 local   all             postgres                                trust
 local   all             all                                     trust
 host    all             all             0.0.0.0/0               trust
-host    all             all             ::1/128                 md5
+host    all             all             ::1/128                 trust
