--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -39,6 +39,8 @@ services:
       - DB_USER=postgres
       - REDIS_HOST=localhost
       - REDIS_PORT=6379
+      - APP_ASSETS_HOST=//cartodb-libs.global.ssl.fastly.net/cartodbui
+      - APP_ASSETS_DEVELOPMENT_HOST=http://localhost:8089/public
     volumes:
       - cartodb-code:/cartodb
     tty: true
