--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
     build: cartodb/.
     ports:
       - "3000:3000"
+      - "8089:8089"
     links:
       - cartodb-postgresql
       - cartodb-redis
@@ -57,6 +58,7 @@ services:
       - DB_USER=postgres
       - REDIS_HOST=cartodb-redis
       - REDIS_PORT=6379
+      - APP_ASSETS_HOST=http://localhost:8089/public
 
   docker-cartodb:
     build: docker-cartodb/.
